@@ -90,7 +90,9 @@ desc:"Edit CSS Style"
 paste:{
 paste_text_desc:"Paste as Plain Text",
 paste_word_desc:"Paste from Word",
-selectall_desc:"Select All"
+selectall_desc:"Select All",
+plaintext_mode_sticky:"Paste is now in plain text mode. Click again to toggle back to regular paste mode. After you paste something you will be returned to regular paste mode.",
+plaintext_mode:"Paste is now in plain text mode. Click again to toggle back to regular paste mode."
 },
 paste_dlg:{
 text_title:"Use CTRL+V on your keyboard to paste the text into the window.",
@@ -121,8 +123,8 @@ cell:"Cell"
 },
 autosave:{
 unload_msg:"The changes you made will be lost if you navigate away from this page.",
-restore_content: "Restore auto-saved content",
-warning_message: "If you restore the saved content, you will lose all the content that is currently in the editor.\n\nAre you sure you want to restore the saved content?"
+restore_content:"Restore auto-saved content.",
+warning_message:"If you restore the saved content, you will lose all the content that is currently in the editor.\n\nAre you sure you want to restore the saved content?."
 },
 fullscreen:{
 desc:"Toggle fullscreen mode"
@@ -154,16 +156,15 @@ no_mpell:"No misspellings found."
 pagebreak:{
 desc:"Insert page break."
 },
-advlist : {
-	types : 'Types',
-	def : 'Default',
-	lower_alpha : "Lower alpha",
-	lower_greek : "Lower greek",
-	lower_roman : "Lower roman",
-	upper_alpha : "Upper alpha",
-	upper_roman : "Upper roman",
-	circle : "Circle",
-	disc : "Disc",
-	square : "Square"
-}
-}});
+advlist:{
+types:"Types",
+def:"Default",
+lower_alpha:"Lower alpha",
+lower_greek:"Lower greek",
+lower_roman:"Lower roman",
+upper_alpha:"Upper alpha",
+upper_roman:"Upper roman",
+circle:"Circle",
+disc:"Disc",
+square:"Square"
+}}});
